--- a/ForTutorials/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ForTutorials/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -187,7 +187,7 @@ InputAction=
 LastLevel=/Engine/Maps/Templates/OpenWorld
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -330,7 +330,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
-InterchangeFbxSettings.FBX =True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
